--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="imagem">
                 <img src="asserts/0.jpg" height="500px" id="imag">
-                <p id="titu">¯\_(ツ)_/¯</p>
+                <p id="titu">Casada?</p>
             </div>
             <div class="butao">
                 <button id="butao" >APERTE WOW</button>
